// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TripCard renders the grid mode 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E3D6C3",
        "borderRadius": 18,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      {
        "elevation": 2,
        "shadowColor": "#2A231B",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 6,
      },
      {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#E6DCCB",
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "relative",
        },
        {
          "height": 120,
          "width": "100%",
        },
        false,
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      fill="none"
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#D3C4AD"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={1.6}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={40}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4292068525,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={1.6}
      >
        <RNSVGRect
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          height={16}
          rx={2}
          width={18}
          x={3}
          y={4}
        />
        <RNSVGCircle
          cx={8.5}
          cy={9.5}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          r={1.6}
        />
        <RNSVGPath
          d="M4 18l5-5 4 4 3-3 4 4"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "paddingBottom": 12,
        "paddingHorizontal": 12,
        "paddingTop": 11,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A231B",
          "fontFamily": "HankenGrotesk_700Bold",
          "fontSize": 15.5,
          "letterSpacing": -0.2,
        }
      }
    >
      Sykes Hot Springs Overnight
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 7,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="Maya P."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                {
                  "marginLeft": 0,
                },
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            MP
          </Text>
        </View>
        <View
          accessibilityLabel="Jordan R."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                null,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            JR
          </Text>
        </View>
        <View
          accessibilityLabel="Alex L."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                null,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            AL
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#6A5D4D",
            "flexShrink": 1,
            "fontFamily": "HankenGrotesk_400Regular",
            "fontSize": 12.5,
          }
        }
      >
        8 going · 2 you know
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 7,
          },
          {
            "justifyContent": "space-between",
            "marginTop": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 6,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F4EDE2",
              "borderColor": "#E3D6C3",
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "HankenGrotesk_600SemiBold",
                "fontSize": 11,
              },
              {
                "color": "#2A231B",
              },
            ]
          }
        >
          Adventure
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#6A5D4D",
            "fontFamily": "HankenGrotesk_500Medium",
            "fontSize": 12,
          }
        }
      >
        Sat–Sun · Mar 8 · $18
      </Text>
    </View>
  </View>
</View>
`;

exports[`TripCard renders the shelf mode 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E3D6C3",
        "borderRadius": 18,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      {
        "elevation": 2,
        "shadowColor": "#2A231B",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 6,
      },
      {
        "width": 260,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#E6DCCB",
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "relative",
        },
        {
          "height": 150,
          "width": "100%",
        },
        false,
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      fill="none"
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#D3C4AD"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={1.6}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={40}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4292068525,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={1.6}
      >
        <RNSVGRect
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          height={16}
          rx={2}
          width={18}
          x={3}
          y={4}
        />
        <RNSVGCircle
          cx={8.5}
          cy={9.5}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          r={1.6}
        />
        <RNSVGPath
          d="M4 18l5-5 4 4 3-3 4 4"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "paddingBottom": 12,
        "paddingHorizontal": 12,
        "paddingTop": 11,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A231B",
          "fontFamily": "HankenGrotesk_700Bold",
          "fontSize": 15.5,
          "letterSpacing": -0.2,
        }
      }
    >
      Sykes Hot Springs Overnight
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 7,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="Maya P."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                {
                  "marginLeft": 0,
                },
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            MP
          </Text>
        </View>
        <View
          accessibilityLabel="Jordan R."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                null,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            JR
          </Text>
        </View>
        <View
          accessibilityLabel="Alex L."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                null,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            AL
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#6A5D4D",
            "flexShrink": 1,
            "fontFamily": "HankenGrotesk_400Regular",
            "fontSize": 12.5,
          }
        }
      >
        8 going · 2 you know
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 7,
          },
          {
            "justifyContent": "space-between",
            "marginTop": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 6,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F4EDE2",
              "borderColor": "#E3D6C3",
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "HankenGrotesk_600SemiBold",
                "fontSize": 11,
              },
              {
                "color": "#2A231B",
              },
            ]
          }
        >
          Adventure
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#6A5D4D",
            "fontFamily": "HankenGrotesk_500Medium",
            "fontSize": 12,
          }
        }
      >
        Sat–Sun · Mar 8 · $18
      </Text>
    </View>
  </View>
</View>
`;

exports[`TripCard renders the ✓/✕ respond affordance 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E3D6C3",
        "borderRadius": 18,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      {
        "elevation": 2,
        "shadowColor": "#2A231B",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 6,
      },
      {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#E6DCCB",
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "relative",
        },
        {
          "height": 120,
          "width": "100%",
        },
        false,
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      fill="none"
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#D3C4AD"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={1.6}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={40}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4292068525,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={1.6}
      >
        <RNSVGRect
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          height={16}
          rx={2}
          width={18}
          x={3}
          y={4}
        />
        <RNSVGCircle
          cx={8.5}
          cy={9.5}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          r={1.6}
        />
        <RNSVGPath
          d="M4 18l5-5 4 4 3-3 4 4"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      {
        "paddingBottom": 12,
        "paddingHorizontal": 12,
        "paddingTop": 11,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A231B",
          "fontFamily": "HankenGrotesk_700Bold",
          "fontSize": 15.5,
          "letterSpacing": -0.2,
        }
      }
    >
      Sykes Hot Springs Overnight
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 7,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="Maya P."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                {
                  "marginLeft": 0,
                },
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            MP
          </Text>
        </View>
        <View
          accessibilityLabel="Jordan R."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                null,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            JR
          </Text>
        </View>
        <View
          accessibilityLabel="Alex L."
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#6F5F96",
                "flexGrow": 0,
                "flexShrink": 0,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderRadius": 999,
                "height": 22,
                "width": 22,
              },
              [
                {
                  "borderColor": "#FFFFFF",
                  "borderWidth": 2,
                  "marginLeft": -10,
                },
                null,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "HankenGrotesk_700Bold",
                },
                {
                  "fontSize": 8,
                },
              ]
            }
          >
            AL
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#6A5D4D",
            "flexShrink": 1,
            "fontFamily": "HankenGrotesk_400Regular",
            "fontSize": 12.5,
          }
        }
      >
        8 going · 2 you know
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 7,
          },
          {
            "justifyContent": "space-between",
            "marginTop": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 6,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F4EDE2",
              "borderColor": "#E3D6C3",
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "HankenGrotesk_600SemiBold",
                "fontSize": 11,
              },
              {
                "color": "#2A231B",
              },
            ]
          }
        >
          Adventure
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#6A5D4D",
            "fontFamily": "HankenGrotesk_500Medium",
            "fontSize": 12,
          }
        }
      >
        Sat–Sun · Mar 8 · $18
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 10,
        "paddingBottom": 14,
        "paddingHorizontal": 14,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "gap": 6,
            "justifyContent": "center",
            "padding": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#CDBCA4",
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={17}
        bbWidth={17}
        fill="none"
        focusable={false}
        height={17}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#2A231B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2.2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 17,
              "width": 17,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={17}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4280951579,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2.2}
        >
          <RNSVGPath
            d="M6 6l12 12M18 6L6 18"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          [
            {
              "fontFamily": "HankenGrotesk_700Bold",
              "fontSize": 14,
            },
            {
              "color": "#2A231B",
            },
          ]
        }
      >
        Can't make it
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "gap": 6,
            "justifyContent": "center",
            "padding": 12,
          },
          {
            "backgroundColor": "#E0703A",
            "borderColor": "#E0703A",
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={17}
        bbWidth={17}
        fill="none"
        focusable={false}
        height={17}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#FFFFFF"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2.4}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 17,
              "width": 17,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={17}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2.4}
        >
          <RNSVGPath
            d="M5 12l5 5 9-11"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          [
            {
              "fontFamily": "HankenGrotesk_700Bold",
              "fontSize": 14,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        I'm in
      </Text>
    </View>
  </View>
</View>
`;
